Bug 83735 - [mesa-10.2.x] broken with llvm-3.5 and old CPUs
Summary: [mesa-10.2.x] broken with llvm-3.5 and old CPUs
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Mesa core (show other bugs)
Version: 10.2
Hardware: x86 (IA32) Linux (All)
: medium blocker
Assignee: mesa-dev
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-09-10 20:03 UTC by Laurent carlier
Modified: 2014-09-17 02:32 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
[PATCH 1/2] gallivm: Disable workaround for PR12833 on LLVM 3.2+ (1.10 KB, patch)
2014-09-10 22:42 UTC, Evangelos Foutras
Details | Splinter Review
[PATCH 2/2] gallivm: set mcpu when initializing llvm execution engine (3.28 KB, patch)
2014-09-10 22:43 UTC, Evangelos Foutras
Details | Splinter Review

Description Laurent carlier 2014-09-10 20:03:01 UTC
mesa-10.2 fail to run with llvm-3.5 and old CPUs:

$ glxgears
LLVM ERROR: Cannot select: intrinsic %llvm.x86.sse41.pblendvb

it seem that mesa-10.3 branch and git master already provide the fix:
http://cgit.freedesktop.org/mesa/mesa/commit/?id=cad60420d5ea36a4b6fa2e6c91317f71423aa63e

https://bugs.archlinux.org/task/41918
Comment 1 Evangelos Foutras 2014-09-10 22:42:38 UTC
Created attachment 106091 [details] [review]
[PATCH 1/2] gallivm: Disable workaround for PR12833 on LLVM 3.2+
Comment 2 Evangelos Foutras 2014-09-10 22:43:20 UTC
Created attachment 106092 [details] [review]
[PATCH 2/2] gallivm: set mcpu when initializing llvm execution engine
Comment 3 Evangelos Foutras 2014-09-10 22:45:48 UTC
I have attached patches from the master branch. The second patch is slightly modified to apply to the 10.2 branch.
Comment 4 Emil Velikov 2014-09-17 02:32:52 UTC
Thanks gents. I've slightly tweaked the second patch and push both in.
They should be out with mesa 10.2.8 coming this Friday


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.