gallivm: Disable workaround for PR12833 on LLVM 3.2+.

Fixed upstream.

(cherry picked from commit 172ef0c5a5a97c211702eb4033eeaac20993350e)
Nominated-by: Evangelos Foutras <evangelos@foutrelis.com>
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=83735